--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="movie_backdrop_content_desc">Movie Backdrop</string>
     <string name="icon_rating_content_desc">Icon Rating</string>
     <string name="title_retry">Retry</string>
+    <string name="title_overview">Overview</string>
 </resources>
