add video trailer section in movies details screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="icon_rating_content_desc">Icon Rating</string>
     <string name="title_retry">Retry</string>
     <string name="title_overview">Overview</string>
+    <string name="title_trailers">Trailers</string>
 </resources>
